--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:file:E:/Learnig/learningspring/src/main/resources/data/testdb
+spring.datasource.url=jdbc:h2:file:./data/testdb
