--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>learningspring-0.0.1-SNAPSHOT</finalName>
 	</build>
 
 </project>
