--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:file:./data/testdb
 spring.h2.console.settings.web-allow-others=true
+spring.jpa.hibernate.ddl-auto = update
